# manipdyn

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md
manipdyn/: .gitignore  README.md  mkdocs.yml  pyproject.toml
manipdyn/benchmarks/results/: BENCHMARK.md  perception_bench.md  results.json
manipdyn/docs/: README.md  analysis.md  gui.md  multi_robot.md  perception.md  rl.md  task_planning.md  tasks.md
manipdyn/docs/theory/: benchmark.md  control.md  kinematics.md  optimization.md  planning.md
manipdyn/scripts/: benchmark_perception.py  demo_headless.py  make_analysis.py  make_demos.py  make_gallery.py  make_handover.py  make_multi_perception.py  make_perception.py  make_perception_demo.py  make_pick_place.py  optimize_controllers.py  plan_task.py  train_rl.py  train_vision_rl.py
manipdyn/src/manipdyn/: __init__.py  cli.py
manipdyn/src/manipdyn/benchmark/: __init__.py  harness.py  metrics.py  report.py  scenarios.py
manipdyn/src/manipdyn/control/: __init__.py  base.py  ctc.py  ilqr.py  impedance.py  lqr.py  mppi.py  osc.py  pid.py  tsid.py
manipdyn/src/manipdyn/dynamics/: __init__.py  linearize.py
manipdyn/src/manipdyn/gui/: __init__.py  app.py
manipdyn/src/manipdyn/kinematics/: __init__.py  ik.py
manipdyn/src/manipdyn/models/: __init__.py  procedural.py  scene_base.xml  scene_clutter.xml  scene_obstacle.xml  scene_pick.xml
manipdyn/src/manipdyn/perception/: __init__.py  camera.py  estimate.py  pointcloud.py
manipdyn/src/manipdyn/planning/: __init__.py  base.py  collision.py  prm.py  rrt.py  rrt_star.py  smoothing.py
manipdyn/tests/: test_benchmark.py  test_controllers.py  test_gui.py  test_multi_arm.py  test_perception.py  test_planning.py  test_procedural.py  test_rl.py  test_robot_spec.py  test_smoke.py  test_taskplan.py  test_tasks.py  test_trajectory.py  test_tuning.py
(+52 files in other folders)
